fix alignment of text for toggle switches

--- a/src/components/forms/ToggleSwitch.scss
+++ b/src/components/forms/ToggleSwitch.scss
@@ -83,4 +83,9 @@
       transform: translate3d(22px, 2px, 0);
     }
   }
+
+  span {
+    position: relative;
+    top: -3px;
+  }
 }
